Revert "Fix cell splitting on small screens"
This reverts commit ad86e210e7a4dac6dd57958c43679c5b9c3aa153.

--- a/src/app/modules/shared/components/tables/mat-fsp-table/mat-fsp-table.component.scss
+++ b/src/app/modules/shared/components/tables/mat-fsp-table/mat-fsp-table.component.scss
@@ -2,10 +2,6 @@ table {
     width: 100%;
 }
 
-.mat-cell {
-    padding: 6px;
-}
-
 .scroll-container {
     overflow: auto;
 }
